--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.18.1",
     "joi": "^17.6.1",
     "mongodb": "^4.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
